[gd_scene load_steps=12 format=3 uid="uid://bpxltcnmbttc2"]

[ext_resource type="Texture2D" uid="uid://jxcrag8quidu" path="res://art/Terrain/Dirt 4.png" id="1_ag2ay"]
[ext_resource type="Script" path="res://terrain/collapsible_block.gd" id="1_x5ie5"]
[ext_resource type="Texture2D" uid="uid://rrlfwkwxchxh" path="res://art/Terrain/Stone.png" id="2_xupwn"]
[ext_resource type="Script" path="res://terrain/CollapsibleBlockImpactArea.gd" id="4_tk7py"]
[ext_resource type="Script" path="res://terrain/DownDetectionArea.gd" id="5_ebrhe"]
[ext_resource type="Script" path="res://terrain/UpDetectionArea.gd" id="5_ke4pg"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vl73v"]
light_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iqyqw"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46aq0"]
size = Vector2(14, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a12m3"]
size = Vector2(5, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfpgc"]
size = Vector2(4, 1)

[node name="CollapsibleBlock" type="RigidBody2D"]
gravity_scale = 0.15
lock_rotation = true
script = ExtResource("1_x5ie5")

[node name="TerrainTextureSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_ag2ay")

[node name="FallingSprite" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_vl73v")
texture = ExtResource("2_xupwn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_iqyqw")

[node name="ImpactArea" type="Area2D" parent="."]
script = ExtResource("4_tk7py")

[node name="ImpactAreaCollisionZone" type="CollisionShape2D" parent="ImpactArea"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_46aq0")

[node name="DownDetectionArea" type="Area2D" parent="."]
script = ExtResource("5_ebrhe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownDetectionArea"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_a12m3")

[node name="UpDetectionArea" type="Area2D" parent="."]
script = ExtResource("5_ke4pg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpDetectionArea"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_lfpgc")

[connection signal="falling" from="." to="." method="_on_falling"]
[connection signal="body_entered" from="ImpactArea" to="." method="_on_impact_area_body_entered"]
[connection signal="body_exited" from="ImpactArea" to="." method="_on_impact_area_body_exited"]
[connection signal="area_entered" from="DownDetectionArea" to="." method="_on_down_detection_area_area_entered"]
[connection signal="area_entered" from="UpDetectionArea" to="." method="_on_up_detection_area_area_entered"]
